--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "backend-landing-midas",
   "version": "1.0.0",
-  "main": "src/app.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-     "dev": "nodemon src/app.js",
-    "start": "node src/app.js"
+    "dev": "nodemon src/app.js",
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
