--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-PORT=3000
-DB_HOST=54.164.43.201
-DB_USER=user
-DB_PASSWORD=Midas*2025$
+PORT=3306
+DB_HOST=198.46.186.2
+DB_USER=usuarioCrm2
+DB_PASSWORD=Midas*2025%
 DB_NAME=landing_bd
